[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faultstorm"
version = "0.1.0"
description = "Fault-injection testing framework for distributed databases"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "psycopg2-binary",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "flake8",
    "isort",
    "black",
]

[tool.setuptools.packages.find]
include = ["faultstorm*"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", "__pycache__", ".pytest_cache", ".mypy_cache", "*.egg-info", "build", "dist"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
